Remove lsp mode from ruby-mode

--- a/configuration.org
+++ b/configuration.org
@@ -615,9 +615,7 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
     ;;   - https://github.com/rust-lang/rls#setup
     (use-package lsp-mode
       :ensure t
-      :hook (
-             (ruby-mode . lsp-deferred)
-             (rust-mode . lsp-deferred))
+      :hook ((rust-mode . lsp-deferred))
         :commands (lsp lsp-deferred))
   #+end_src
 
@@ -1439,10 +1437,6 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
     (use-package rust-mode
       :ensure t
-      :bind (("C-c C-c" . rust-run)
-             ("C-c C-b" . rust-compile)
-             ("C-c C-t" . rust-test)
-             ("C-c C-l" . rust-run-clippy))
       :init
       (add-hook 'before-save-hook
                 (lambda () (when (eq 'rust-mode major-mode)
