Replace helm with ivy
Helm development has been suspended. This replaces the completion
system with ivy.

References
----------

- https://github.com/emacs-helm/helm/issues/2386
- https://news.ycombinator.com/item?id=24449883
- https://github.com/abo-abo/swiper#ivy
- https://github.com/bbatsov/projectile/commit/46ab7fe772289a8e9c45eb8e829bf2a1d3f87917
- https://github.com/ericdanan/counsel-projectile#getting-started

--- a/configuration.org
+++ b/configuration.org
@@ -716,62 +716,43 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
 ** Fuzzy searching names and content
 
-  Use Helm as the fuzzy matching search backend for projectile.
+  Use ivy as the fuzzy matching search backend for projectile.
 
   #+BEGIN_SRC emacs-lisp
-    (use-package helm
-      :ensure t
-      :bind
-      ("M-x" . helm-M-x)
-      :init
-      (setq helm-M-x-fuzzy-match t))
+    (use-package counsel
+      :ensure t)
 
-    (use-package helm-projectile
+    (use-package counsel-projectile
+      :ensure t)
+
+    (use-package ivy
       :ensure t
-      :config
-      (helm-projectile-on))
+      :init
+      (ivy-mode 1)
+      (setq ivy-use-virtual-buffers t)
+      (setq enable-recursive-minibuffers t)
+      ;; enable this if you want `swiper' to use it
+      ;; (setq search-default-mode #'char-fold-to-regexp)
+      (global-set-key "\C-s" 'swiper)
+      (global-set-key (kbd "C-c C-r") 'ivy-resume)
+      (global-set-key (kbd "<f6>") 'ivy-resume)
+      (global-set-key (kbd "M-x") 'counsel-M-x)
+      (global-set-key (kbd "C-x C-f") 'counsel-find-file)
+      (global-set-key (kbd "<f1> f") 'counsel-describe-function)
+      (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
+      (global-set-key (kbd "<f1> o") 'counsel-describe-symbol)
+      (global-set-key (kbd "<f1> l") 'counsel-find-library)
+      (global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+      (global-set-key (kbd "<f2> u") 'counsel-unicode-char)
+      (global-set-key (kbd "C-c g") 'counsel-git)
+      (global-set-key (kbd "C-c j") 'counsel-git-grep)
+      (global-set-key (kbd "C-c k") 'counsel-ag)
+      (global-set-key (kbd "C-x l") 'counsel-locate)
+      (global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
+      (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history))
 
     (use-package ag
       :ensure t)
-
-    (use-package helm-ag
-      :ensure t)
-
-    ;; For some reason, in dired-mode, projectile complains about not
-    ;; being able to find tramp so make sure that it's available here:
-    (use-package tramp
-      :ensure t)
-  #+END_SRC
-
-** Interactively find/edit matching lines
-
-  #+BEGIN_SRC emacs-lisp
-    (use-package helm-swoop
-      :ensure t
-      :bind (("M-i" . 'helm-swoop)
-             ("M-I" . 'helm-swoop-back-to-last-point)
-             ("C-c M-i" . 'helm-multi-swoop)
-             ("C-x M-i" . 'helm-multi-swoop-all))
-      :init
-      ;; Save buffer when helm-multi-swoop-edit complete
-      (setq helm-multi-swoop-edit-save t)
-      ;; If this value is t, split window inside the current window
-      (setq helm-swoop-split-with-multiple-windows nil)
-      ;; If this value is t, split window inside the current window
-      (setq helm-swoop-split-with-multiple-windows nil)
-      ;; If you prefer fuzzy matching
-      (setq helm-swoop-use-fuzzy-match t)
-      :config
-      ;; When doing isearch, hand the word over to helm-swoop
-      (define-key isearch-mode-map (kbd "M-i") 'helm-swoop-from-isearch)
-      ;; From helm-swoop to helm-multi-swoop-all
-      (define-key helm-swoop-map (kbd "M-i") 'helm-multi-swoop-all-from-helm-swoop)
-      ;; Instead of helm-multi-swoop-all, you can also use helm-multi-swoop-current-mode
-      (define-key helm-swoop-map (kbd "M-m") 'helm-multi-swoop-current-mode-from-helm-swoop)
-      (define-key helm-swoop-map (kbd "C-r") 'helm-previous-line)
-      (define-key helm-swoop-map (kbd "C-s") 'helm-next-line)
-      (define-key helm-multi-swoop-map (kbd "C-r") 'helm-previous-line)
-      (define-key helm-multi-swoop-map (kbd "C-s") 'helm-next-line))
   #+END_SRC
 
 ** Group related filesystem items into "Projects"
@@ -785,15 +766,16 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
       :init
       (setq projectile-enable-caching t)
       (setq projectile-indexing-method 'alien)
-      (setq projectile-completion-system 'helm)
-      (setq projectile-switch-project-action 'helm-projectile)
+      (setq projectile-completion-system 'ivy)
       (add-hook 'dired-mode-hook 'projectile-mode)
       (add-hook 'elixir-mode-hook 'projectile-mode)
       (add-hook 'js-mode-hook 'projectile-mode)
       (add-hook 'ruby-mode-hook 'projectile-mode)
       (add-hook 'web-mode-hook 'projectile-mode)
       (define-key projectile-mode-map (kbd "s-p") 'projectile-command-map)
-      (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map))
+      (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
+      (projectile-global-mode)
+      (counsel-projectile-mode))
   #+END_SRC
 
   Make it easier to navigate between related concepts in Rails
