--- a/configuration.org
+++ b/configuration.org
@@ -100,24 +100,53 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
 
 ** Initialize the color-theme
 
-   No matter which color schemes I try, I always come back to
-   gruvbox. Here I'm giving the =doom= version of the theme a try.
+   Let's try out Prot's =modus= themes!
 
-   #+BEGIN_SRC emacs-lisp  (use-package gruvbox-theme
-     (use-package all-the-icons
-       :ensure t)
-     ;;; (all-the-icons-install-fonts)
+   #+BEGIN_SRC emacs-lisp
+     (defmacro modus-themes-format-sexp (sexp &rest objects)
+       `(eval (read (format ,(format "%S" sexp) ,@objects))))
 
-     (use-package doom-themes
-       :ensure t
-       :config
-       (load-theme 'doom-gruvbox t))
+     (dolist (theme '("vivendi" "operandi"))
+       (modus-themes-format-sexp
+        (defun modus-%1$s-theme-load ()
+          (setq modus-%1$s-theme-slanted-constructs t
+                modus-%1$s-theme-bold-constructs t
+                modus-%1$s-theme-fringes 'subtle ; {nil,'subtle,'intense}
+                modus-%1$s-theme-mode-line '3d ; {nil,'3d,'moody}
+                modus-%1$s-theme-syntax 'alt-syntax ; {nil,faint,'yellow-comments,'green-strings,'yellow-comments-green-strings,'alt-syntax,'alt-syntax-yellow-comments}
+                modus-%1$s-theme-intense-hl-line t
+                modus-%1$s-theme-intense-paren-match t
+                modus-%1$s-theme-links 'faint ; {nil,'faint,'neutral-underline,'faint-neutral-underline,'no-underline}
+                modus-%1$s-theme-no-mixed-fonts nil
+                modus-%1$s-theme-prompts nil ; {nil,'subtle,'intense}
+                modus-%1$s-theme-completions 'moderate ; {nil,'moderate,'opinionated}
+                modus-%1$s-theme-diffs nil ; {nil,'desaturated,'fg-only}
+                modus-%1$s-theme-org-blocks 'grayscale ; {nil,'grayscale,'rainbow}
+                modus-%1$s-theme-headings  ; Read further below in the manual for this one
+                '((1 . section)
+                  (2 . line)
+                  (t . rainbow-line-no-bold))
+                modus-%1$s-theme-variable-pitch-headings nil
+                modus-%1$s-theme-scale-headings t
+                modus-%1$s-theme-scale-1 1.1
+                modus-%1$s-theme-scale-2 1.15
+                modus-%1$s-theme-scale-3 1.21
+                modus-%1$s-theme-scale-4 1.27
+                modus-%1$s-theme-scale-5 1.33)
+          (load-theme 'modus-%1$s t))
+        theme))
 
-     (use-package doom-modeline
-       :ensure t
-       :init
-       (doom-modeline-mode 1)
-       (setq doom-modeline-project-detection 'projectile))
+     (defun modus-themes-toggle ()
+       "Toggle between `modus-operandi' and `modus-vivendi' themes."
+       (interactive)
+       (if (eq (car custom-enabled-themes) 'modus-operandi)
+           (progn
+             (disable-theme 'modus-operandi)
+             (modus-vivendi-theme-load))
+         (disable-theme 'modus-vivendi)
+         (modus-operandi-theme-load)))
+
+     (modus-vivendi-theme-load)
    #+END_SRC
 
 ** Disable menu, toolbar, and scrollbar UI elements
