--- a/configuration.org
+++ b/configuration.org
@@ -2160,12 +2160,16 @@ started with Org mode" [[https://www.youtube.com/watch?v%3DSzA2YODtgK4][talk]].
        :commands magit-status magit-blame
        :bind ("C-x g" . magit-status)
        :init
+       (setq ad-redefinition-action 'accept)
        (defadvice magit-status (around magit-fullscreen activate)
          (window-configuration-to-register :magit-fullscreen)
          ad-do-it
          (delete-other-windows))
        (defadvice magit-quit-window (after magit-restore-screen activate)
-         (jump-to-register :magit-fullscreen)))
+         (jump-to-register :magit-fullscreen))
+       :config
+       (remove-hook 'magit-refs-sections-hook 'magit-insert-remote-branches)
+       (remove-hook 'magit-refs-sections-hook 'magit-insert-tags))
    #+END_SRC
 ** Forge
 
